[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-signal-bot"
version = "1.0.0"
description = "Einfacher Signal Bot der mit einer REST API (bbernhard/signal-cli-rest-api) interagiert"
readme = "README.md"
authors = [{ name = "Baspla", email = "pydev@mailbox.org" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["signal", "bot"]
dependencies = [
    "timeloop >= 1.0.2",
    "requests >= 2.28.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/baspla/signal_bot"
